methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:9: error: not found: value froward
  carre(); froward(); forward(); forward(); forward(); forward();
           ^