methods.picture.PatternPicture.scala.code
override def run() {
  for (compteur <-1 to 2) {
    ligne(); 
    
  }
}

def ligne() {
  carre(); froward(); forward(); forward(); forward(); forward();
  for (compteur <-1 to 4) {
    backward();
  }
  left();
  for (compteur <- 1 to 2) {
    forward();
  }
  right();
}

def carre() {
  faireV1(Color.RED); forward(); forward(); faireV2(Color.BLUE); backward(); backward(); left(); forward(); forward(); right(); faireV2(Color.YELLOW); forward; forward();; faireV1(Color.GREEN); backward(); backward(); right(); forward(); forward(); left(); 
}


def faireV1(c:Color) {
    setCouleurBrosse(c); forward(); brushDown(); brushUp(); left(); forward(); left(); forward(); brushDown(); brushUp(); left(); forward(); left();
}

def faireV2(c:Color) {
  setCouleurBrosse(c); brushDown(); brushUp(); forward(); left(); forward(); brushDown(); brushUp(); left(); forward(); left(); forward(); left();
}
